* [F - 17/07/2025]: Changelog.txt : 
    - Aggiunto al profilo utente l'email
    - ReservationController.java aggiunta funzionalità per cancellare una prenotazione o aggiornarla
    - Aggiunta form per modificare una prenotazione
    - AuthConfiguration.java aggiunte rotte con permessi per profilo e aggiornamento prenotazione
    - showReservation.html migliorato style e aggiunti riferimenti per la modifica e la cancellazione
    - dashboard.html aggiunto riferimento per visualizzare il profilo utente
    - messages.properties aggiunto messaggio errore per email già utilizzata
    - UserValidator aggiunto al validator la gestione dell'email duplicata
    - ReservationValidator modificati metodi non funzionanti, modificato il reservation.duplicato
        dava problemi per la stessa data.
    - UserRepository e Userservice aggiunta ricerca utente in base all'email
    - ReservationService aggiunto update e modificato metodo alreadyExists (Per fixare la possibilità di aggiornare
        la prenotazione senza errori sulla data)
    - formRegisterUser email è un valore obbligatorio ora

* [F - 17/07/2025]: Changelog.txt, UserController.java :
    - Aggiunta rotta in UserController per vedere il profilo utente (views userProfile.html)
    - Aggiunto riferimento all'ancora visualizza profilo
    - AuthConfiguration aggiunto path per il profilo, visualizzabile da chi autenticato 

* [F - 16/07/2025]: Changelog.txt, dashboard.html, MainController.java, ReservationService.java : 
    - dashboard.html ADMIN modificata, ora come numero di prenotazioni vedi quelle della data corrente
    - MainController.java viene passato al model il numero delle prenotazioni odierne
    - ReservationService.java aggiunta funzione per contare tutte le prenotazioni di una determinata data

* [F - 16/07/2025]: Changelog.txt, AuthConfiguration.java, ReservationController.java, showReservation.html, dashboard.html : 