@@ -40,7 +40,7 @@
 							</article>
 						</div>
 					</div>
-					<a th:href="@{/admin/allPrenotazioni}" class="tile is-parent">
+					<a th:href="@{/admin/allReservation}" class="tile is-parent">
 						<article class="tile is-child box">
 							<div class="level is-mobile">
 								<div class="level-left">
