@@ -1,0 +1,24 @@
+<html>
+
+<head th:replace="fragments/common.html :: headerfiles(title='Prenotazione aggiornata | MyRestaurant')"></head>
+
+<body>
+	<header th:replace="fragments/common.html :: navbar"></header>
+	<!-- END NAV -->
+	<div class="container_body container">
+		<section class="hero is-medium is-success">
+			<div class="hero-body">
+				<p class="title">
+					Prenotazione aggiornata!
+				</p>
+				<p class="subtitle">
+					Hai modificato correttamente la tua prenotazione
+				</p>
+				<a class="button is-rounded is-white" th:href="@{/home}">Vai alla dashboard</a>
+			</div>
+		</section>
+	</div>
+	<footer th:replace="fragments/common.html :: footer"></footer>
+</body>
+
+</html>
